--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,17 @@
     "description": "An Unleash client for Laravel",
     "type": "library",
     "require": {
+        "ext-json": "*",
         "guzzlehttp/guzzle": "^6.3|^7.0",
         "illuminate/support": "^5.8|^6|^7|^8",
         "illuminate/http": "^5.8|^6|^7|^8",
-        "illuminate/contracts": "^5.8|^6|^7|^8"
+        "illuminate/contracts": "^5.8|^6|^7|^8",
+        "lastguest/murmurhash": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.5",
+        "orchestra/testbench": "^6.0"
     },
     "autoload": {
         "psr-4": {
